--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 
   <body>
     <link rel="stylesheet" href="algogame.css" />
+    <ul>
+      <li><a href="default.asp">Sorting</a></li>
+      <li><a href="news.asp">News</a></li>
+      <li><a href="contact.asp">Contact</a></li>
+      <li><a href="about.asp">About</a></li>
+    </ul>
   </body>
 </html>
