--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="algogame.css" />
     <ul>
       <li><a href="default.asp">Sorting</a></li>
-      <li><a href="news.asp">News</a></li>
-      <li><a href="contact.asp">Contact</a></li>
-      <li><a href="about.asp">About</a></li>
+      <li><a href="news.asp">Shortest Path</a></li>
+     
     </ul>
   </body>
 </html>
