--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
   <body>
     <link rel="stylesheet" href="algogame.css" />
+
     <ul>
+      <li><a href="news.asp">Searching</a></li>
       <li><a href="default.asp">Sorting</a></li>
       <li><a href="news.asp">Shortest Path</a></li>
     </ul>
