--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="algogame.css" />
 
     <ul>
-      <li><a href="news.asp">Searching</a></li>
-      <li><a href="default.asp">Sorting</a></li>
-      <li><a href="news.asp">Shortest Path</a></li>
+      <li><a href="./search/Search.html">Search</a></li>
+      <li><a href="./sort/sort.html">Sorting</a></li>
+      <li><a href="./path/path.html">Shortest Path</a></li>
     </ul>
   </body>
 </html>
