--- a/sort/sort.html
+++ b/sort/sort.html
@@ -15,5 +15,22 @@
     </ul>
 
     <p>Sorting Visualization</p>
+
+    <div id="but">
+      <button id="sort">Sort</button>
+      <button id="ref">Shuffle</button>
+      <button id="rev">Sort in Reverse</button>
+    </div>
+    <div class="cntr">
+      <br />
+      <canvas
+        id="myCanvas"
+        width="1200"
+        height="300"
+        style="border: 2px solid silver; background: #333231b9;"
+      ></canvas>
+    </div>
+
+    <script src="sort.js"></script>
   </body>
 </html>
