--- a/sort/sort.html
+++ b/sort/sort.html
@@ -25,8 +25,8 @@
       <br />
       <canvas
         id="myCanvas"
-        width="1200"
-        height="300"
+        width="1110%"
+        height="300%"
         style="border: 2px solid silver; background: #333231b9;"
       ></canvas>
     </div>
