--- a/sort/sort.html
+++ b/sort/sort.html
@@ -16,7 +16,7 @@
 
     <p>Sorting Visualization</p>
 
-    <div id="but">
+    <div class="cntr" id="but">
       <button id="sort">Sort</button>
       <button id="ref">Shuffle</button>
       <button id="rev">Sort in Reverse</button>
@@ -25,8 +25,8 @@
       <br />
       <canvas
         id="myCanvas"
-        width="1110%"
-        height="300%"
+        width="1021%"
+        height="200%"
         style="border: 2px solid silver; background: #333231b9;"
       ></canvas>
     </div>
