--- a/sort/sort.html
+++ b/sort/sort.html
@@ -15,7 +15,7 @@
     </ul>
 
     <p>Sorting Visualization</p>
-
+    <p class="cntr">Bubble Sort</p>
     <div class="cntr" id="but">
       <button id="sort">Sort</button>
       <button id="ref">Shuffle</button>
