--- a/sort/sort.html
+++ b/sort/sort.html
@@ -15,7 +15,7 @@
     </ul>
 
     <p>Sorting Visualization</p>
-    <p class="cntr">Bubble Sort</p>
+    <p class="cntr text">Bubble Sort</p>
     <div class="cntr" id="but">
       <button id="sort">Sort</button>
       <button id="ref">Shuffle</button>
@@ -25,7 +25,7 @@
       <br />
       <canvas
         id="myCanvas"
-        width="1021%"
+        width="840%"
         height="200%"
         style="border: 2px solid silver; background: #333231b9;"
       ></canvas>
